--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <body>
         <div class="container">
             <div >
-                <h1 class = "header_text">Do you wanna go out with me ehe</h1>
+                <h1 class = "header_text">da li mi moja joksi oprasta sve moje gluposti ehe</h1>
             </div>
             <div class="gif_container">
                 <img src="https://media.giphy.com/media/LnKonfpQ44fNvuGLkA/giphy.gif" alt="Cute animated illustration">
             </div>
             <div class = "buttons">
-                <button class="btn" id = "yesButton" onclick="nextPage()">Yes</button>
-                <button class="btn" id="noButton" onmouseover="moveButton()">No</button>
+                <button class="btn" id = "yesButton" onclick="nextPage()">Da</button>
+                <button class="btn" id="noButton" onmouseover="moveButton()">Ne</button>
                 <script>
                     function nextPage() {
                         window.location.href = "yes.html";
