--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <h1 class = "header_text">da li ce mi moja joksi oprostiti sve<br>moje gluposti ehe</h1>
             </div>
             <div class="gif_container">
-                <img src="https://media.giphy.com/media/LnKonfpQ44fNvuGLkA/giphy.gif" alt="Cute animated illustration">
+                <img src="./style/images/giphy.gif" alt="Cute animated illustration">
             </div>
             <div class = "buttons">
                 <button class="btn" id = "yesButton" onclick="nextPage()">Da</button>
