--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <div >
-                <h1 class = "header_text">da li ce mi moja joksi oprostiti sve<br>moje gluposti ehe</h1>
+                <h1 class = "header_text">hoce li mi moja joksi oprostiti sve<br>moje gluposti ehe</h1>
             </div>
             <div class="gif_container">
                 <img src="./style/images/giphy.gif" alt="Cute animated illustration">
